se modificaron las mensajes de errores y se eliminaron las acciones de error al en cada llamada a la base de datos y se opto por utilizar messages y errores globales los cuales funcionen para toda la aplicacion y no solo para ciertos metodo, ademas se agregaro el carrito con sus acciones y reducers, el historial con sus acciones y reducers y los pagos en linea con sus acciones y sus reducers, tomar en cuenta que solo ciertas acciones tienen sus typos ya que no eran algunas acciones necesarias para realizar una accion

--- a/src/screens/productDetails/productDetails.scss
+++ b/src/screens/productDetails/productDetails.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    pad: 50px;
+    padding: 50px;
     font-size: 150%;
 
     & img {
@@ -49,8 +49,4 @@
         text-transform: uppercase;
         letter-spacing: 2px;
     }
-}
-
-.related {
-    margin-top: 25px;
 }
