--- a/src/components/productItem/productItem.scss
+++ b/src/components/productItem/productItem.scss
@@ -21,8 +21,8 @@
 
         & input {
             position: absolute;
-            width: 25px;
-            height: 25px;
+            width: 20px;
+            height: 20px;
         }
     }
 
@@ -60,7 +60,7 @@
         text-align: center;
         text-transform: uppercase;
         color: white;
-        font-weight: 2px;
+        font-weight: 600;
         letter-spacing: 2px;
         padding: 6px;
     }
