--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,106 @@
 .App {
-    max-width: 1230px;
-    min-height: 100vh;
-    margin: 0 auto;
-    padding: 0 20px;
-    box-shadow: 0 0 35px #eee;
+  max-width: 1230px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-shadow: 0 0 35px #eee;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ul li {
-    list-style: none;
+  list-style: none;
 }
 
 button {
-    border: none;
-    outline: none;
-    background: transparent;
-    cursor: pointer;
+  border: none;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+@media (max-width: 820px) {
+  header {
+    & .logo {
+      min-width: 115px;
+      flex: none;
+    }
+    & ul {
+      padding: 10px 0;
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  header {
+    justify-content: space-between;
+
+    & ul {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100vh;
+      background: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      opacity: 0.98;
+      z-index: 99;
+      transition: 0.5s ease-in;
+    }
+    & .menu {
+      display: block;
+      cursor: pointer;
+    }
+    & ul li .menu {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+  }
+}
+
+@media (max-width: 570px) {
+  .filter_menu .row span {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .App {
+    padding: 0 10px;
+  }
+  .detail {
+    font-size: 100%;
+    padding: 0;
+  }
+  .filter_menu {
+    & input {
+      margin: 0;
+    }
+    & .sort {
+      flex: 1;
+      & select {
+        width: 100%;
+        min-width: 290px;
+        margin: 5px 0;
+      }
+    }
+  }
+  .login-page {
+    padding: 30px 15px;
+  }
+  .delete-all {
+    margin: 20px 0;
+    justify-content: center;
+  }
+  .create_product .upload {
+    margin: 20px 0;
+  }
+  .categories input {
+    width: 72%;
+  }
 }
