--- a/src/screens/products/products.scss
+++ b/src/screens/products/products.scss
@@ -1,7 +1,69 @@
 .products {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    justify-content: center;
-    margin: 20px 0;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.delete-all {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 20px 8.5%;
+  & input {
+    height: 25px;
+    width: 25px;
+    margin: 0 15px;
+  }
+  & span {
+    text-transform: uppercase;
+    color: rgb(3, 165, 206);
+    letter-spacing: 1.3px;
+  }
+  & button {
+    border: 1px solid crimson {
+      radius: 20px;
+    }
+    padding: 10px 25px;
+    color: crimson;
+    text-transform: uppercase;
+  }
+}
+
+.filter_menu {
+  width: 100%;
+  min-height: 40px;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 1rem 0;
+
+  & select,
+  input {
+    border: 1px solid #ccc {
+      radius: 10px;
+    }
+    outline: none;
+    height: 40px;
+    padding: 0 5px;
+  }
+  & input {
+    flex: 1;
+    margin: 0 10px;
+  }
+  & select {
+    background: none;
+  }
+}
+
+.load_more {
+  & button {
+    padding: 10px 25px;
+    margin-bottom: 20px;
+    border: 1px solid #555;
+    text-transform: uppercase;
+  }
 }
