--- a/src/components/productItem/productItem.scss
+++ b/src/components/productItem/productItem.scss
@@ -1,84 +1,84 @@
 .product {
-    &_card {
-        max-width: 300px;
-        overflow: hidden;
-        height: 500px;
-        padding: 15px;
-        box-shadow: 0 0 15px #ddd;
-        margin: 10px 0;
-        position: relative;
+  &_card {
+    max-width: 300px;
+    overflow: hidden;
+    height: 500px;
+    padding: 15px;
+    box-shadow: 0 0 15px #ddd;
+    margin: 10px 0;
+    position: relative;
+    justify-content: center;
 
-        & img {
-            width: 100%;
-            height: 300px;
-            display: block;
-            object-fit: cover;
-        }
-
-        & span {
-            color: crimson;
-        }
-
-        & input {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-        }
+    & img {
+      width: 100%;
+      height: 300px;
+      display: block;
+      object-fit: cover;
     }
 
-    &_box {
-        & h2 {
-            width: 100%;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-            text-transform: capitalize;
-            cursor: pointer;
-            color: #323232;
-        }
-
-        & p {
-            width: 100%;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 3;
-            height: 70px;
-            overflow: hidden;
-            color: #323232;
-        }
+    & span {
+      color: crimson;
     }
+
+    & input {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+    }
+  }
+
+  &_box {
+    & h2 {
+      width: 100%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      text-transform: capitalize;
+      cursor: pointer;
+      color: #323232;
+    }
+
+    & p {
+      width: 100%;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      height: 70px;
+      overflow: hidden;
+      color: #323232;
+    }
+  }
 }
 
 .row_btn {
-    width: 100%;
-    margin-top: 10px;
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
 
-    & button {
-        width: 50%;
-        text-align: center;
-        text-transform: uppercase;
-        color: white;
-        font-weight: 600;
-        letter-spacing: 2px;
-        padding: 6px;
-    }
+  & button {
+    width: 50%;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 600;
+    letter-spacing: 2px;
+    padding: 6px;
+  }
 
-    & a {
-        @extend button;
-    }
+  & a {
+    @extend button;
+  }
 }
 
 #btn {
-    &_buy {
-        background: #555;
-        margin-right: 5px;
-    }
+  &_buy {
+    background: #555;
+    margin-right: 5px;
+  }
 
-    &_view {
-        background: rgb(60, 60, 255);
-        margin-left: 5px;
-    }
-
+  &_view {
+    background: rgb(60, 60, 255);
+    margin-left: 5px;
+  }
 }
